@@ -65,22 +65,13 @@
 							<label>LLL:EXT:bzd_staff_directory/locallang_db.xml:pi_flexform_group</label>
 							<config>
 								<type>select</type>
-								<!--<form_type>user</form_type>
-								<userFunc>tx_ttnews_treeview->displayCategoryTree</userFunc> -->
-								<treeView>1</treeView>
 								<foreign_table>tx_bzdstaffdirectory_groups</foreign_table>
 								<foreign_table_where></foreign_table_where>
 								<size>3</size>
 								<autoSizeMax>10</autoSizeMax>
-								<minitems>0</minitems>
-								<maxitems>5</maxitems>
+								<minitems>1</minitems>
+								<maxitems>15</maxitems>
 								<itemsHeader>LLL:EXT:bzd_staff_directory/locallang_db.xml:pi_flexform_group</itemsHeader>
-							<!--	<items type="array">
-									<numIndex index="100">
-										<numIndex index="0">LLL:EXT:tt_news/locallang_tca.php:tt_news.pi_flexform.category_selection_notCategorized</numIndex>
-										<numIndex index="1">0</numIndex>
-									</numIndex>
-								</items>  -->
 								<allowNonIdValues>1</allowNonIdValues>
 							</config>
 						</TCEforms>
